kubernetes/orthanc/resources/manifest.yml
#https://book.orthanc-server.com/faq/scalability.html#scalability-memory
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-web
spec:
  ports:
  - name: orthanc-web
    protocol: TCP
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-ws
spec:
  ports:
  - name: orthanc-ws
    protocol: TCP
    port: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-dicom
spec:
  ports:
  - name: orthanc-dicom
    protocol: TCP
    port: 4242
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orthanc
spec:
  rules:
  - host: orthanc.somedomain.ch
    http:
      paths:
      - backend:
          serviceName: orthanc-web
          servicePort: orthanc-web
        path: /
      - backend:
          serviceName: orthanc-ws
          servicePort: orthanc-ws
        path: /ws
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc-deployment
spec:
  replicas: 1
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: orthanc
          image: osimis/orthanc
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
            - name: curapacs-python-plugins-vol
              mountPath: /usr/share/orthanc/plugins/python/
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Zurich
        - name: curapacs-python-plugins-vol
          emptyDir: {}
